--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "url": "git://github.com/zrrrzzt/poc-redis-que.git"
   },
   "dependencies": {
+    "hapi": "^11.1.2",
     "redis": "^2.4.2"
   }
 }
